fix: component list's fludiNote fixed ability to upload images, fixed fluidNote initialization while not using modal, also now preventing double-initialization of fluidNote (using different than global 'form-summernote' selector)

--- a/AdminModule/templates/Box/edit.latte
+++ b/AdminModule/templates/Box/edit.latte
@@ -3,7 +3,7 @@
     {include '@help.latte'}
 
     <!-- Component List -->
-    {control componentList}
+    {control componentList, true, ".form-summernote-extended"}
 
     <h1 class="page-header">
         {block title}{$new ? 'Nový box' : 'Úprava boxu'}{/block}
